# pyprune

./: .pre-commit-config.yaml  LICENSE  README.md  justfile  pyproject.toml  setup.py
.github/workflows/: code-quality.yaml  coverage.yaml  publish.yaml  setup.yaml  tests.yaml
backtracking/: __init__.py  backtracking.py  subset.py
examples/: all_sudokus.py  sudoku.py
pyprune/: __init__.py  backtracking.py  subset.py
pyprune/examples/: all_sudokus.py  sudoku.py
pyprune/sudoku/: benchmark.py  sudoku.py  utils.py
test/: test_backtracking.py  test_integration.py  test_optimization.py  test_problem.py  test_subset.py  test_sudoku.py
tests/: test_sudoku.py
